Removed workaround for ControlsFX problem now that it has been fixed